# rust

simple-api/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
simple-api/src/: handler.rs  main.rs
